# Hotel_PMS

./: .gitignore  README.md  build.gradle  settings.gradle
auth_service/: .env.example  .gitignore  Dockerfile  OneDrive - University - alpine AS builder  README.md  (+6 more)
housekeeping_service/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_test_token.py  pyproject.toml  requirements.txt
housekeeping_service/alembic/: env.py
housekeeping_service/alembic/versions/: 0001_create_room_status_table.py  0002_create_housekeeping_tasks_table.py  0003_create_room_supply_standards_table.py  0004_create_inventory_items_table.py  0005_create_inventory_transactions_table.py  0006_create_damage_reports_table.py
housekeeping_service/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  openapi.py  schemas.py
housekeeping_service/app/domain/: __init__.py
housekeeping_service/app/domain/damage/: model.py  router.py
housekeeping_service/app/domain/inventory/: model.py  repository.py  router.py  schemas.py  transaction_model.py
housekeeping_service/app/domain/room_status/: model.py  repository.py  router.py  schemas.py  service.py
housekeeping_service/app/domain/supplies/: model.py  repository.py  router.py  schemas.py
housekeeping_service/app/domain/tasks/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
housekeeping_service/app/messaging/: consumer.py  producer.py
housekeeping_service/app/messaging/events/: incoming.py
housekeeping_service/app/shared/: enums.py  exceptions.py  responses.py
(+98 files in other folders)
