[project]
name = "housekeeping-service"
version = "0.1.0"
description = "Housekeeping & Inventory Management Microservice for Hotel PMS"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "gunicorn==22.0.0",
    "sqlalchemy[asyncio]==2.0.29",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic[email]==2.7.1",
    "pydantic-settings==2.2.1",
    "aiokafka==0.10.0",
    "redis==5.0.4",
    "apscheduler==3.10.4",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
